# scratchnotes

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: file.rs  mod.rs
src/ui/: fonts.rs  mod.rs
wix/: main.wxs
