[package]
name = "scratchnotes"
version = "0.0.2"
edition = "2021"
authors = ["Abhinav Gunwant"]
description = "FromScratch clone written in rust."
license-file = "LICENSE"

[profile.release]
lto = true

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.3", default-features = false, features = [
#    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
dirs-next = "2.0.0"

